--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -25,7 +25,7 @@
 		"@playwright/test": "^1.49.1",
 		"@storybook/addon-essentials": "^8.5.5",
 		"@storybook/addon-interactions": "^8.5.5",
-		"@storybook/addon-svelte-csf": "^4.2.0",
+		"@storybook/addon-svelte-csf": "^5.0.0-next.23",
 		"@storybook/blocks": "^8.5.5",
 		"@storybook/svelte": "^8.5.5",
 		"@storybook/sveltekit": "^8.5.5",
