--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -11,7 +11,7 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.7.18",
-        "@supabase/auth-helpers-nextjs": "^0.9.0",
+        "@supabase/ssr": "^0.1.0",
         "@supabase/auth-ui-react": "^0.4.7",
         "@supabase/auth-ui-shared": "^0.1.8",
         "@supabase/supabase-js": "^2.39.7",
